@@ -601,6 +601,25 @@ seL4_DebugRun(void (*userfn) (void *), void* userarg)
 }
 #endif
 
+#if defined(CONFIG_KERNEL_X86_DANGEROUS_MSR)
+LIBSEL4_INLINE_FUNC void
+seL4_X86DangerousWRMSR(seL4_Uint32 msr, uint64_t value)
+{
+    seL4_Uint32 value_low = value & 0xffffffff;
+    seL4_Uint32 value_high = value >> 32;
+    x86_sys_send(seL4_SysX86DangerousWRMSR, msr, 0, value_low, value_high);
+}
+LIBSEL4_INLINE_FUNC seL4_Uint64
+seL4_X86DangerousRDMSR(seL4_Word msr)
+{
+    seL4_Word unused0 = 0;
+    seL4_Word unused1 = 0;
+    seL4_Word low, high;
+    x86_sys_recv(seL4_SysX86DangerousRDMSR, msr, &unused0, &unused1, &low, &high);
+    return ((seL4_Uint64)low) | ((seL4_Uint64)high << 32);
+}
+#endif
+
 #ifdef CONFIG_ENABLE_BENCHMARKS
 LIBSEL4_INLINE_FUNC seL4_Error
 seL4_BenchmarkResetLog(void)
